View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023945 | Open CASCADE | OCCT:Modeling Data | public | 2013-05-07 07:40 | 2013-12-19 13:55 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0023945: GeomAdaptor_Surface fails to compute the first derivatives on the surface of the attached face | ||||
Description | GeomAdaptor_Surface fails to compute the first derivatives on the surface of the attached face at point 0. -6.337359082e-009. This problem has been detected in the test case boolean bsection N7. | ||||
Steps To Reproduce | To reproduce the problem use the command OCC23945 from the attached file QABugs_19.cxx. This command has the same syntax and the same parameters as the DRAW command svalue. The only difference is that OCC23945 uses GeomAdaptor_Surface to compute the derivatives. Draw script: pload QAcommands restore f.brep f mksurface s f OCC23945 s 0. -6.337359082e-009 x y z dux duy duz dvx dvy dvz The result: An exception was caught 0052B7D0 : Standard_OutOfRange ** Exception ** 0052B7D0 : Standard_OutOfRange | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3(013) bug23945 | ||||
2013-05-07 07:43 developer |
f.brep (15,234 bytes) |
2013-05-07 08:00 developer |
QABugs_19.cxx (15,340 bytes) |
|
Branch CR23945 is ready to review |
|
No remarks. |
|
Dear BugMaster, Branch CR23945 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: d003487336fccbae46ad26b0ec1e31e1da6e1c40 Number of compiler warnings: occt component : Linux: 2 (2 on master) Windows: 11 (11 on master) products component : Linux: 0 (0 on master) Windows: 63 (64 on master) Regressions: No regressions Improvements: No improvements Testing cases: On Linux: bugs moddata_3(013) bug23945 - OK Testing on Linux: Total MEMORY difference: 366124408 / 366035592 Total CPU difference: 53877.05000000056 / 44996.720000001194 There are not differences in images found by testdiff. |
|
On Windows: Regressions: No regressions Improvements: No improvements Testing cases: bugs moddata_3(013) bug23945 - OK Testing on Windows: Total MEMORY difference: 407015516 / 406637692 Total CPU difference: 38537.5 / 34861.96875 There are not differences in images found by testdiff. |
occt: master 470ebb43 2013-05-31 13:13:38
|
0023945: GeomAdaptor_Surface fails to compute the first derivatives on the surface of the attached face Add test case for this fix Add new draw-command OCC23945 for testing this fix Add new draw-command for testing tis fix |
Affected Issues 0023945 |
|
mod - src/GeomAdaptor/GeomAdaptor_Surface.cdl | Diff File | ||
mod - src/GeomAdaptor/GeomAdaptor_Surface.cxx | Diff File | ||
mod - src/QABugs/QABugs_19.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug23945 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-05-07 07:40 |
|
New Issue | |
2013-05-07 07:40 |
|
Assigned To | => emv |
2013-05-07 07:43 |
|
File Added: f.brep | |
2013-05-07 07:59 |
|
Description Updated | |
2013-05-07 07:59 |
|
Steps to Reproduce Updated | |
2013-05-07 08:00 |
|
File Added: QABugs_19.cxx | |
2013-05-07 08:01 |
|
Assigned To | emv => abv |
2013-05-07 08:01 |
|
Steps to Reproduce Updated | |
2013-05-07 08:43 |
|
Assigned To | abv => ifv |
2013-05-07 08:43 |
|
Status | new => assigned |
2013-05-07 13:19 |
|
Steps to Reproduce Updated | |
2013-05-07 17:20 |
|
Note Added: 0024321 | |
2013-05-07 17:20 |
|
Assigned To | ifv => jgv |
2013-05-07 17:20 |
|
Status | assigned => resolved |
2013-05-08 13:36 |
|
Note Added: 0024338 | |
2013-05-08 13:36 |
|
Status | resolved => reviewed |
2013-05-23 12:36 |
|
Assigned To | jgv => mkv |
2013-05-29 17:13 |
|
Note Added: 0024547 | |
2013-05-29 17:13 |
|
Test case number | => bugs moddata_3(013) bug23945 |
2013-05-30 15:28 |
|
Note Added: 0024571 | |
2013-05-30 15:31 |
|
Assigned To | mkv => bugmaster |
2013-05-30 15:31 |
|
Status | reviewed => tested |
2013-05-31 16:23 | bugmaster | Target Version | => 6.7.0 |
2013-06-03 14:48 |
|
Changeset attached | => occt master 470ebb43 |
2013-06-03 14:48 |
|
Assigned To | bugmaster => ifv |
2013-06-03 14:48 |
|
Status | tested => verified |
2013-06-03 14:48 |
|
Resolution | open => fixed |
2013-12-19 13:53 | bugmaster | Status | verified => closed |
2013-12-19 13:55 | bugmaster | Fixed in Version | => 6.7.0 |