0023945: GeomAdaptor_Surface fails to compute the first derivatives on the surface of the attached face Add test case for this fix Add new draw-command OCC23945 for testing this fix Add new draw-command for testing tis fix